--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,9 +1,94 @@
 @import "~bootstrap/scss/bootstrap";
+:root {
+    --bs-blue: #0d6efd;
+    --bs-indigo: #6610f2;
+    --bs-purple: #6f42c1;
+    --bs-pink: #d63384;
+    --bs-red: #dc3545;
+    --bs-orange: #fd7e14;
+    --bs-yellow: #ffc107;
+    --bs-green: #198754;
+    --bs-teal: #20c997;
+    --bs-cyan: #0dcaf0;
+    --bs-white: #fff;
+    --bs-gray: #6c757d;
+    --bs-gray-dark: #343a40;
+    --bs-primary: #0d6efd;
+    --bs-secondary: #6c757d;
+    --bs-success: #198754;
+    --bs-info: #0dcaf0;
+    --bs-warning: #ffc107;
+    --bs-danger: #dc3545;
+    --bs-light: #f8f9fa;
+    --bs-dark: #212529;
+    --bs-font-sans-serif: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+    --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
+    --bs-table-bg: rgba(0, 0, 0, 0.3);
+    --bs-body-bg: rgba(0, 0, 0, 0.3);
+    --bs-table-color: white;
+    --bs-emphasis-color: white;
+}
 
-main {
-    background-color: gray;
+body{
+    background-image: url(/public/background.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.my-background{
+    background-color: transparent !important;
+}
+
+.my-background-table{
+    background-color: rgba($color: #000000, $alpha: 0.3);
+    color: white;
+}
+
+.my-badge{
+    background-color: rgba($color: #000000, $alpha: 0.3);
+}
+
+.my-modal{
+    background-color: rgba($color: #000000, $alpha: 0.8);
+}
+
+.table-bordered{
+    border: 1px solid white;
 }
 
 .my-card{
     height: 180px;
 }
+
+.form-control::placeholder {
+    color: white !important;
+}
+
+.form-select::placeholder {
+    color: white !important;
+}
+
+// SCROLLBAR
+
+/* width */
+::-webkit-scrollbar {
+    width: 15px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+background: #555; 
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+background: #999; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+background: #222; 
+}
+
+
