--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -91,4 +91,14 @@ background: #999;
 background: #222; 
 }
 
+.img-box{
+    max-width: 500px;
+
+    img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
 
